--- a/config.json.sample
+++ b/config.json.sample
@@ -5,5 +5,7 @@
     "login_timeout": 15,
     "version": 2.06,
     "max_clients": 100,
-    "enable_bot": false
+    "enable_bot": false,
+    "update_server_ip" : "127.0.0.1",
+    "update_server_port" : "6685",
 }
